@@ -110,11 +110,11 @@
                     doc_src/en/images/InstantGuide_2.png
                     src/**/Bundle.properties
                     release/win32-specific/CustomMessages.ini
-                    scripts/check_rules.properties
-                    scripts/spellcheck.properties
-                    scripts/svn_cleanup_selected.properties
-                    scripts/search_replace.properties
-                    script/replace_strip_tags.properties" />
+                    scripts/properties/check_rules.properties
+                    scripts/properties/spellcheck.properties
+                    scripts/properties/svn_cleanup_selected.properties
+                    scripts/properties/search_replace.properties
+                    script/properties/replace_strip_tags.properties" />
         </copy>
         <copy file="release/readme.txt"
               tofile="${l10n.min.dir}/source/readme.utf8"
@@ -138,11 +138,11 @@
         <copy todir="${l10n.max.dir}/source"> 
             <fileset dir="."
                     includes="doc_src/en/** src/**/Bundle.properties release/win32-specific/CustomMessages.ini
-                    scripts/check_rules.properties
-                    scripts/spellcheck.properties
-                    scripts/svn_cleanup_selected.properties
-                    scripts/search_replace.properties
-                    script/replace_strip_tags.properties"
+                    scripts/properties/check_rules.properties
+                    scripts/properties/spellcheck.properties
+                    scripts/properties/svn_cleanup_selected.properties
+                    scripts/properties/search_replace.properties
+                    script/properties/replace_strip_tags.properties"
                     excludes="doc_src/en/index.xml
                     doc_src/en/html/**
                     doc_src/en/pdf/**" />
